# sqs-pull

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release-binaries.yml
src/: main.rs
