[package]
name = "sqs-pull"
version = "0.1.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
edition = "2018"

[dependencies]
futures = "0.3.5"
indicatif = "0.14.0"
log = "0.4.8"
rayon = "1.3.0"
regex = "1.3.9"
rusoto_core = "0.44.0"
rusoto_sqs = "0.44.0"
stderrlog = "0.4.3"
structopt = "0.3.14"
tokio = { version = "0.2", features = ["full"] }
