[package]
name = "sqs-pull"
version = "0.1.1"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
edition = "2018"

[dependencies]
indicatif = "0.14"
log = "0.4.8"
num_cpus = "1.13"
regex = "1.3.9"
rusoto_core = "0.44"
rusoto_sqs = "0.44"
stderrlog = "0.4.3"
structopt = "0.3.14"

[dependencies.tokio]
version = "0.2"
features = ["macros", "rt-threaded"]
